[package]
edition = "2021"
name = "intercode_rust"
version = "0.1.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.test]
split-debuginfo = "unpacked"

[profile.release]
debug = 1
lto = "thin"

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = {version = "0.5", features = ["profiling"]}

[workspace]
members = [
  "./crates/intercode_cms",
  "./crates/intercode_conventions",
  "./crates/intercode_email",
  "./crates/intercode_entities",
  "./crates/intercode_events",
  "./crates/intercode_forms",
  "./crates/intercode_full_text_search",
  "./crates/intercode_graphql",
  "./crates/intercode_graphql_core",
  "./crates/intercode_graphql_loaders",
  "./crates/intercode_inflector",
  "./crates/intercode_liquid",
  "./crates/intercode_liquid_drops",
  "./crates/intercode_notifiers",
  "./crates/intercode_policies",
  "./crates/intercode_query_builders",
  "./crates/intercode_reporting",
  "./crates/intercode_server",
  "./crates/intercode_signups",
  "./crates/intercode_store",
  "./crates/intercode_timespan",
  "./crates/intercode_users",
  "./crates/seawater",
  "./crates/seawater_derive",
]

[workspace.dependencies]
Inflector = "*"
askama = {version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.3.0"
async-graphql = {version = "~5.0.10", features = ["tracing", "dataloader", "chrono"]}
async-graphql-axum = "~5.0.10"
async-graphql-value = {version = "~5.0.10"}
async-trait = "*"
aws-config = "0.56.1"
aws-sdk-sesv2 = "0.31.1"
aws-smithy-http = "*"
axum = {version = "~0.6.20", features = ["multipart", "macros", "headers"]}
axum-extra = {version = "~0.7.7", features = ["cookie"]}
axum-server = {version = "0.5.1", features = ["tls-rustls"]}
axum-sessions = "~0.5"
base64 = "0.21.4"
bcrypt = "0.15.0"
bumpalo = "3.13.0"
bumpalo-herd = "0.1.2"
cached = "~0.44.0"
chrono = "0.4"
chrono-tz = "0.8"
csrf = "0.4.1"
dyn-clone = "1.0.14"
futures = "0.3.28"
hex = "0.4.3"
html-escape = "0.2.13"
http = "0.2.9"
hyper = "0.14.27"
i18n-embed = {version = "0.13", features = ["fluent-system"]}
i18n-embed-fl = "0.6"
ics = "0.5.8"
id-arena = "2.2.1"
indicatif = {version = "0.17.6", features = ["improved_unicode"]}
intercode_cms = {path = "./crates/intercode_cms"}
intercode_conventions = {path = "./crates/intercode_conventions"}
intercode_email = {path = "./crates/intercode_email"}
intercode_entities = {path = "./crates/intercode_entities"}
intercode_events = {path = "./crates/intercode_events"}
intercode_forms = {path = "./crates/intercode_forms"}
intercode_full_text_search = {path = "./crates/intercode_full_text_search"}
intercode_graphql = {path = "./crates/intercode_graphql"}
intercode_graphql_core = {path = "./crates/intercode_graphql_core"}
intercode_graphql_loaders = {path = "./crates/intercode_graphql_loaders"}
intercode_inflector = {path = "./crates/intercode_inflector"}
intercode_liquid = {path = "./crates/intercode_liquid"}
intercode_liquid_drops = {path = "./crates/intercode_liquid_drops"}
intercode_notifiers = {path = "./crates/intercode_notifiers"}
intercode_policies = {path = "./crates/intercode_policies"}
intercode_query_builders = {path = "./crates/intercode_query_builders"}
intercode_reporting = {path = "./crates/intercode_reporting"}
intercode_server = {path = "./crates/intercode_server"}
intercode_signups = {path = "./crates/intercode_signups"}
intercode_store = {path = "./crates/intercode_store"}
intercode_timespan = {path = "./crates/intercode_timespan"}
intercode_users = {path = "./crates/intercode_users"}
itertools = "0.11.0"
linkify = "~0.10.0"
liquid = {git = "https://github.com/nbudin/liquid-rust.git", branch = "lax-nulls"}
liquid-core = {git = "https://github.com/nbudin/liquid-rust.git", branch = "lax-nulls"}
mailparse = "0.14.0"
md5 = "*"
once_cell = "1.18.0"
opentelemetry = {version = "0.20.0", features = ["rt-tokio"]}
oxide-auth = "0.5.4"
parking_lot = "0.12.1"
phonenumber = "0.3"
pulldown-cmark = "0.9.3"
regex = "*"
rust-embed = "6"
rusty-money = "0.4.1"
sea-orm = {version = "^0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
seawater = {path = "./crates/seawater"}
serde = "1.0"
serde_json = "1.0"
sha1 = "0.10.5"
stripe = {package = "async-stripe", version = "0.25.1", default-features = false, features = ["runtime-tokio-hyper-rustls", "checkout", "chrono", "connect", "webhook-events"]}
time = "0.3.28"
tokio = {version = "~1.32.0", features = ["rt-multi-thread", "macros", "signal", "tracing"]}
tower = {version = "0.4.13", features = ["limit", "make"]}
tower-http = {version = "0.4.3", features = ["catch-panic", "compression-br", "compression-deflate", "compression-gzip", "trace"]}
tracing = "0.1.37"
tuple-conv = "~1.0.1"
twilio = "1.0.3"
url = "*"
uuid = {version = "1.3.3", features = ["v4"]}

[features]
dhat-heap = ["dep:dhat"] # if you are doing heap profiling
flamegraph = ["dep:tracing-flame"]
tokio-console = ["dep:console-subscriber", "tokio/full", "tokio/tracing"]

[dependencies]
async-graphql = {workspace = true}
axum = {workspace = true}
chrono = {workspace = true}
chrono-tz = {workspace = true}
clap = {version = "4.4.6", features = ["derive", "cargo"]}
console-subscriber = {version = "0.2.0", optional = true}
dhat = {version = "0.3.2", optional = true}
dotenv = "0.15.0"
futures = {workspace = true}
http = {workspace = true}
indicatif = {workspace = true}
intercode_cms = {workspace = true}
intercode_entities = {workspace = true}
intercode_graphql = {workspace = true}
intercode_graphql_core = {workspace = true}
intercode_graphql_loaders = {workspace = true}
intercode_liquid = {workspace = true}
intercode_liquid_drops = {workspace = true}
intercode_policies = {workspace = true}
intercode_reporting = {workspace = true}
intercode_server = {workspace = true}
intercode_signups = {workspace = true}
intercode_users = {workspace = true}
itertools = {workspace = true}
liquid = {workspace = true}
once_cell = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-otlp = {version = "0.13.0", features = ["tls-roots"]}
oxide-auth = {workspace = true}
oxide-auth-axum = "~0.3.0"
regex = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
time = {workspace = true}
tokio = {workspace = true}
tonic = "~0.9.0"
tracing = {workspace = true}
tracing-flame = {version = "0.2.0", optional = true}
tracing-opentelemetry = "0.21.0"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
