[package]
edition = "2021"
name = "intercode_cms"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
futures = {workspace = true}
html-escape = {workspace = true}
http = {workspace = true}
intercode_entities = {path = "../intercode_entities"}
intercode_graphql_core = {path = "../intercode_graphql_core"}
intercode_graphql_loaders = {path = "../intercode_graphql_loaders"}
intercode_liquid = {path = "../intercode_liquid"}
intercode_policies = {path = "../intercode_policies"}
liquid = {workspace = true}
sea-orm = {workspace = true}
seawater = {path = "../seawater"}
serde_json = {workspace = true}
url = {workspace = true}
