[package]
edition = "2021"
name = "intercode_cms"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
futures = {workspace = true}
html-escape = {workspace = true}
http = {workspace = true}
intercode_entities = {workspace = true}
intercode_graphql_core = {workspace = true}
intercode_graphql_loaders = {workspace = true}
intercode_liquid = {workspace = true}
intercode_policies = {workspace = true}
liquid = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
serde_json = {workspace = true}
url = {workspace = true}
