[package]
edition = "2021"
name = "intercode_email"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
aws-config = {workspace = true}
aws-sdk-sesv2 = {workspace = true}
aws-smithy-types = {workspace = true}
http = {workspace = true}
intercode_entities = {workspace = true}
intercode_graphql_core = {workspace = true}
intercode_graphql_loaders = {workspace = true}
intercode_policies = {workspace = true}
intercode_query_builders = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
tokio = {workspace = true}
