[package]
edition = "2021"
name = "intercode_entities"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
chrono = "*"
indexmap = "1.9.2"
once_cell = "*"
paste = "1.0.11"
regex = "*"
sea-orm = {version = "^0", features = ["macros", "postgres-array"]}
seawater = {path = "../seawater"}
serde = "*"
