[package]
edition = "2021"
name = "intercode_entities"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
indexmap = "1.9.3"
once_cell = {workspace = true}
paste = "1.0.11"
regex = {workspace = true}
sea-orm = {workspace = true, features = ["macros", "postgres-array"]}
serde = {workspace = true}
