[package]
edition = "2021"
name = "intercode_entities"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
indexmap = "2.0.0"
intercode_timespan = {workspace = true}
itertools = {workspace = true}
once_cell = {workspace = true}
paste = "1.0.12"
regex = {workspace = true}
rusty-money = {workspace = true}
sea-orm = {workspace = true, features = ["macros", "postgres-array"]}
serde = {workspace = true}
