[package]
edition = "2021"
name = "intercode_graphql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true, features = ["dataloader", "tracing", "chrono"]}
async-graphql-value = {workspace = true}
async-stripe = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
futures = {workspace = true}
i18n-embed = {workspace = true}
i18n-embed-fl = {workspace = true}
intercode_cms = {path = "../intercode_cms"}
intercode_entities = {path = "../intercode_entities"}
intercode_graphql_core = {path = "../intercode_graphql_core"}
intercode_graphql_loaders = {path = "../intercode_graphql_loaders"}
intercode_inflector = {path = "../intercode_inflector"}
intercode_liquid = {path = "../intercode_liquid"}
intercode_pagination_from_query_builder = {path = "../intercode_pagination_from_query_builder"}
intercode_policies = {path = "../intercode_policies"}
intercode_query_builders = {path = "../intercode_query_builders"}
intercode_store = {path = "../intercode_store"}
intercode_timespan = {path = "../intercode_timespan"}
itertools = {workspace = true}
liquid = {workspace = true}
liquid-core = {workspace = true}
mailparse = {workspace = true}
md5 = {workspace = true}
pulldown-cmark = {workspace = true}
rusty-money = {workspace = true}
sea-orm = {workspace = true}
seawater = {path = "../seawater"}
serde_json = {workspace = true}
