[package]
edition = "2021"
name = "intercode_graphql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true, features = ["dataloader", "tracing", "chrono"]}
async-graphql-value = {workspace = true}
chrono = {workspace = true}
futures = {workspace = true}
intercode_cms = {path = "../intercode_cms"}
intercode_entities = {path = "../intercode_entities"}
intercode_events = {path = "../intercode_events"}
intercode_forms = {path = "../intercode_forms"}
intercode_graphql_core = {path = "../intercode_graphql_core"}
intercode_graphql_loaders = {path = "../intercode_graphql_loaders"}
intercode_inflector = {path = "../intercode_inflector"}
intercode_liquid = {path = "../intercode_liquid"}
intercode_policies = {path = "../intercode_policies"}
intercode_query_builders = {path = "../intercode_query_builders"}
intercode_reporting = {path = "../intercode_reporting"}
intercode_signups = {path = "../intercode_signups"}
intercode_store = {path = "../intercode_store"}
intercode_timespan = {path = "../intercode_timespan"}
itertools = {workspace = true}
liquid = {workspace = true}
liquid-core = {workspace = true}
md5 = {workspace = true}
pulldown-cmark = {workspace = true}
sea-orm = {workspace = true}
seawater = {path = "../seawater"}
serde_json = {workspace = true}
