[package]
edition = "2021"
name = "intercode_graphql_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-stripe = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
chrono-tz = {workspace = true}
http = {workspace = true}
i18n-embed = {workspace = true}
intercode_entities = {path = "../intercode_entities"}
intercode_liquid = {path = "../intercode_liquid"}
intercode_policies = {path = "../intercode_policies"}
liquid = {workspace = true}
once_cell = {workspace = true}
regex = {workspace = true}
sea-orm = {workspace = true}
seawater = {path = "../seawater"}
serde_json = {workspace = true}
