[package]
edition = "2021"
name = "intercode_graphql_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
chrono-tz = {workspace = true}
dyn-clone = {workspace = true}
http = {workspace = true}
i18n-embed = {workspace = true}
intercode_entities = {workspace = true}
intercode_inflector = {workspace = true}
intercode_liquid = {workspace = true}
intercode_timespan = {workspace = true}
liquid = {workspace = true}
once_cell = {workspace = true}
regex = {workspace = true}
rusty-money = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
serde_json = {workspace = true}
strum = {workspace = true}
