[package]
edition = "2021"
name = "intercode_graphql_loaders"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
futures = {workspace = true}
intercode_entities = {path = "../intercode_entities"}
intercode_graphql_core = {path = "../intercode_graphql_core"}
itertools = {workspace = true}
sea-orm = {workspace = true}
seawater = {path = "../seawater"}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
