[package]
edition = "2021"
name = "intercode_graphql_loaders"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
futures = {workspace = true}
intercode_entities = {workspace = true}
intercode_graphql_core = {workspace = true}
itertools = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
