[package]
edition = "2021"
name = "intercode_graphql_presend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-graphql-value = {workspace = true}
intercode_cms = {workspace = true}
intercode_entities = {workspace = true}
intercode_graphql = {workspace = true}
intercode_graphql_core = {workspace = true}
intercode_graphql_loaders = {workspace = true}
intercode_graphql_presend_macros = {workspace = true}
intercode_policies = {workspace = true}
once_cell = {workspace = true}
regex = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_path_to_error = {workspace = true}
tracing = {workspace = true}
