[package]
edition = "2021"
name = "intercode_graphql_presend_macros"
version = "0.1.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = {workspace = true}
quote = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_path_to_error = {workspace = true}
syn = {workspace = true}
