[package]
edition = "2021"
name = "intercode_inflector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = {workspace = true}
regex = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
