[package]
edition = "2021"
name = "intercode_liquid"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "*"
async-graphql-value = "*"
chrono = "*"
chrono-tz = "*"
html-escape = "*"
i18n-embed = "*"
i18n-embed-fl = "*"
intercode_entities = {path = "../intercode_entities"}
intercode_inflector = {path = "../intercode_inflector"}
intercode_timespan = {path = "../intercode_timespan"}
linkify = "0.9.0"
liquid = {git = "https://github.com/nbudin/liquid-rust.git", branch = "lax-nulls"}
liquid-core = {git = "https://github.com/nbudin/liquid-rust.git", branch = "lax-nulls"}
md5 = "*"
pulldown-cmark = "0.9.2"
regex = "*"
sea-orm = "*"
seawater = {path = "../seawater"}
serde = "*"
serde_json = "*"
tokio = "*"
tracing = "*"
url = "*"
