[package]
edition = "2021"
name = "intercode_liquid"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
async-graphql-value = {workspace = true}
chrono = {workspace = true}
chrono-tz = {workspace = true}
dyn-clone = {workspace = true}
html-escape = {workspace = true}
i18n-embed = {workspace = true}
i18n-embed-fl = {workspace = true}
intercode_entities = {workspace = true}
intercode_inflector = {workspace = true}
intercode_timespan = {workspace = true}
linkify = {workspace = true}
liquid = {workspace = true}
liquid-core = {workspace = true}
md5 = {workspace = true}
once_cell = {workspace = true}
pulldown-cmark = {workspace = true}
regex = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
url = {workspace = true}
