[package]
edition = "2021"
name = "intercode_pagination_from_query_builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
intercode_graphql_core = {path = "../intercode_graphql_core"}
intercode_policies = {path = "../intercode_policies"}
intercode_query_builders = {path = "../intercode_query_builders"}
sea-orm = {workspace = true}
