[package]
edition = "2021"
name = "intercode_policies"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
sea-orm = {workspace = true, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
axum = {workspace = true}
cached = {workspace = true}
futures = {workspace = true}
intercode_entities = {path = "../intercode_entities"}
intercode_graphql_core = {path = "../intercode_graphql_core"}
intercode_graphql_loaders = {path = "../intercode_graphql_loaders"}
itertools = {workspace = true}
oxide-auth = {workspace = true}
sea-orm = {workspace = true}
seawater = {path = "../seawater"}
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}
tuple-conv = {workspace = true}
