[package]
edition = "2021"
name = "intercode_policies"
version = "0.1.0"

[features]
test_helpers = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
sea-orm = {workspace = true, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}

[dependencies]
async-graphql = {workspace = true}
async-trait = {workspace = true}
axum = {workspace = true}
cached = {workspace = true}
futures = {workspace = true}
intercode_entities = {workspace = true}
intercode_graphql_core = {workspace = true}
intercode_graphql_loaders = {workspace = true}
intercode_query_builders = {workspace = true}
itertools = {workspace = true}
oxide-auth = {workspace = true}
sea-orm = {workspace = true}
seawater = {workspace = true}
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}
tuple-conv = {workspace = true}
