[package]
edition = "2021"
name = "intercode_query_builders"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {workspace = true}
intercode_entities = {path = "../intercode_entities"}
intercode_graphql_core = {path = "../intercode_graphql_core"}
intercode_policies = {path = "../intercode_policies"}
sea-orm = {workspace = true}
